--- a/applications/smurf/Makefile.am
+++ b/applications/smurf/Makefile.am
@@ -3,7 +3,7 @@
 # Build libsmf before the applications
 
 SUBDIRS = defaults libsmf libsmurf libsc2sim libacsis libaztec libgsd \
-          libsc2fts docs scripts
+          libsc2fts scripts docs
 
 # can not use surf_mon_FCFLAGS yet
 AM_FCFLAGS = -Isrc -Isc2da -Isc2sim -Icsofit
