autotools: update applications/ and libraries/ so that all the subcomponents can be bootstrapped after being git cleaned.
The issue is that without an auxdir autoconf looks for the install-sh script
in . ../ and ../../ which usually succeeds in ../, sadly that directory will
never contain ltmain.sh for instance, so we need to make sure that all links
to install-sh etc. are local to the sub-component.

--- a/applications/ccdpack/configure.ac
+++ b/applications/ccdpack/configure.ac
@@ -1,4 +1,5 @@
 AC_INIT([ccdpack],[4.1-1],[ccdpack@starlink.ac.uk])
+AC_CONFIG_AUX_DIR([build-aux])
 AC_PREREQ([2.69])
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 AC_CONFIG_SRCDIR(ccdexercise)
