--- a/applications/figaro/configure.ac
+++ b/applications/figaro/configure.ac
@@ -3,7 +3,8 @@ AC_REVISION($Revision$)
  
 dnl    Initialisation: package name and version number
 AC_INIT([figaro],[5.6-6],[starlink@jiscmail.ac.uk])
- 
+AC_CONFIG_AUX_DIR([build-aux])
+
 dnl    Require autoconf-2.50 at least
 AC_PREREQ([2.69])
 
