--- a/applications/htx/configure.ac
+++ b/applications/htx/configure.ac
@@ -2,6 +2,7 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 AC_INIT(htx, 1.3-2, starlink@jiscmail.ac.uk)
+AC_CONFIG_AUX_DIR([build-aux])
 AC_PREREQ(2.50)
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 AC_CONFIG_SRCDIR([showme])
