--- a/applications/news/configure.ac
+++ b/applications/news/configure.ac
@@ -3,6 +3,7 @@ AC_REVISION($Revision$)
  
 dnl    Initialisation: package name and version number
 AC_INIT(news, 2.1-2, starlink@jiscmail.ac.uk)
+AC_CONFIG_AUX_DIR([build-aux])
  
 dnl    Require autoconf-2.50 at least
 AC_PREREQ(2.50)
