--- a/libraries/gks/configure.ac
+++ b/libraries/gks/configure.ac
@@ -6,6 +6,7 @@ dnl    Note that for GKS the RAL version number is 1.37 but
 dnl    Starlink does not increment that version. Rather than use
 dnl    non-standard nomenclature use the patch level for starlink patching.
 AC_INIT([gks],[1.37-1],[starlink@jiscmail.ac.uk])
+AC_CONFIG_AUX_DIR([build-aux])
 
 dnl    Require autoconf-2.50 at least
 AC_PREREQ([2.69])
