--- a/libraries/pcs/configure.ac
+++ b/libraries/pcs/configure.ac
@@ -2,6 +2,7 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 AC_INIT([pcs],[4.1-4],[starlink@jiscmail.ac.uk])
+AC_CONFIG_AUX_DIR([build-aux])
 
 AC_PREREQ([2.69])
 AM_INIT_AUTOMAKE(1.8.2-starlink)
