smurf: Provide option for jsasplit to crop bad edges from output NDF
The old boolean TRIM parameter, is now an integer that can take three
values: 0 - no cropping, 1 - crop to the bounds of the input NDF, 2 -
crop to remove any bad borders from the output NDFs.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -2720,11 +2720,11 @@ package @PACKAGE@ {
             }
 
             parameter trim {
-                type _LOGICAL
+                type _INTEGER
                 vpath DEFAULT
                 ppath CURRENT
-                prompt {Trim bad border from output NDFs?}
-                default FALSE
+                prompt {How to trim the output NDFs}
+                default 2
                 helpkey *
             }
 
