img: msg files should not be distributed

--- a/libraries/img/Makefile.am
+++ b/libraries/img/Makefile.am
@@ -21,7 +21,7 @@ libimg_adam_la_SOURCES = \
 
 ##  Distribute the original sources, in case these are needed for further
 ##  development.
-EXTRA_DIST = $(G_ROUTINES) $(GNP_ROUTINES) $(GCP_ROUTINES) img_err.msg
+EXTRA_DIST = $(G_ROUTINES) $(GNP_ROUTINES) $(GCP_ROUTINES)
 
 ## List headers which are to be installed -- these are built first if necessary
 include_HEADERS = img.h
