img: BUILT_SOURCES not BUILT_ROUTINES

--- a/libraries/img/Makefile.am
+++ b/libraries/img/Makefile.am
@@ -27,7 +27,7 @@ EXTRA_DIST = $(G_ROUTINES) $(GNP_ROUTINES) $(GCP_ROUTINES)
 include_HEADERS = img.h
 include_MESSAGES = IMG_ERR img_err.h
 
-BUILT_ROUTINES = $(include_MESSAGES)
+BUILT_SOURCES = $(include_MESSAGES)
 
 stardocs_DATA = @STAR_LATEX_DOCUMENTATION@
 
