smurf: Allow sc2concat output NDFs to be specified by base name
The new parameter OUTBASE allows the names of the output NDFs to be
generated automatically as "<outbase>_<n>.sdf", for <n> = 1, 2, 3, etc.
This means you do not need to know how many output NDFs will be created,
before running sc2concat.

The default is still to use the old OUT parameter, which requires that
you know how many output NDFs are going to be created.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -4369,6 +4369,15 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter outbase {
+                type LITERAL
+                ppath CURRENT
+                vpath DEFAULT
+                prompt {Base-name for output NDF data structures}
+                default !
+                helpkey *
+            }
+
             parameter outfiles {
                 type LITERAL
                 prompt {Text file in which to put the output NDF names}
