--- a/applications/gaia/scripts/Makefile.am
+++ b/applications/gaia/scripts/Makefile.am
@@ -6,7 +6,8 @@ SCRIPTS_GAIA = displaycat displaypolcat gaiacmap.sh gaiacut \
                gaiadisp gaiadisp.sh gaiaremote.sh gaia.sh \
                gaia_standalone.csh gaiawcs2tab pix2wcs \
                tabbedgaia.sh wcs2pix zoomcutandflip connect_to_gaia.tcl \
-               querysiap ftpget querycone queryreg
+               querysiap ftpget querycone queryreg querynedobject \
+	       querynedcone
 
 ##  Edit the main startup scripts so that they set the LD_LIBRARY_PATH
 ##  to include the installation libdir.
