--- a/.gitmodules
+++ b/.gitmodules
@@ -150,13 +150,13 @@
 	url = git://github.com/jac-h/perl-UKIRT-Archive.git
 [submodule "thirdparty/fsf/autotools/autoconf/autoconf"]
 	path = thirdparty/fsf/autotools/autoconf/autoconf
-	url = git@github.com:Starlink/autoconf.git
+	url = ../autoconf.git
 [submodule "thirdparty/fsf/autotools/automake/automake"]
 	path = thirdparty/fsf/autotools/automake/automake
-	url = git@github.com:Starlink/automake.git
+	url = ../automake.git
 [submodule "thirdparty/fsf/autotools/libtool/libtool"]
 	path = thirdparty/fsf/autotools/libtool/libtool
-	url = git@github.com:Starlink/libtool.git
+	url = ../libtool.git
 [submodule "thirdparty/fsf/autotools/m4/m4"]
 	path = thirdparty/fsf/autotools/m4/m4
-	url = git@github.com:Starlink/m4.git
+	url = ../m4.git
