smurf: New script to give approx map region from a raw file
The "rawregion" script returns an AST circle in a text file, calculated
from the MAP_HGHT, MAP_WDTH, BASEC1, BASEC2 and TRACKSYS FITS headers in
the supplied file.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -5768,6 +5768,10 @@ package @PACKAGE@ {
         obey {python $SMURF_DIR/jsasplit.py}
     }
 
+    command rawregion {
+        obey {python $SMURF_DIR/rawregion.py}
+    }
+
     icl {defhelp @PACKAGE@ $@PACKAGE_UPCASE@_HELP 0}
 
     display {
