kappa: Allow ardplot to plot over an empty display
Previously, ardplot required that another picture be displayed first,
with which the Region to be plotted could be aligned. Now, it can plot
the Region on an empty display. To do this it creates a basic TAN
projection (for sky regions), mapped onto the display surface so that the
Region is centred on the display. The size of the plot can be controlled
by the new SIZE parameter.

--- a/applications/kappa/kappa.ifd.in
+++ b/applications/kappa/kappa.ifd.in
@@ -3775,6 +3775,15 @@ package kappa {
             helpkey *
         }
 
+         parameter clear {
+            type _LOGICAL
+            vpath DEFAULT
+            ppath CURRENT DEFAULT
+            prompt {Is the current picture to be cleared before plotting?}
+            helpkey *
+            default FALSE
+         }
+
          parameter device {
             position 2
             ptype DEVICE
@@ -3801,6 +3810,15 @@ package kappa {
             vpath DEFAULT
             ppath CURRENT DEFAULT
             default 0
+            helpkey *
+        }
+
+         parameter size {
+            type _REAL
+            prompt {Size of plot (in units of the Region size)}
+            vpath DEFAULT
+            ppath CURRENT DEFAULT
+            default 2.0
             helpkey *
         }
 
