smurf: added in draft jsa_generic dimmconfig
dimmconfig_jsa_generic.lis has been addded and the smurf Makefile.am
updated to include it.

--- a/applications/smurf/Makefile.am
+++ b/applications/smurf/Makefile.am
@@ -105,6 +105,7 @@ examples/dimmconfig_moon.lis \
 examples/dimmconfig_pointing.lis \
 examples/dimmconfig_pointing_fts.lis \
 examples/dimmconfig_veryshort_planet.lis \
+examples/dimmconfig_jsa_generic.lis \
 examples/resist.cfg \
 examples/s4a20091214_00015_0002.sdf \
 examples/s4a20091214_00015_0003.sdf \
