--- a/libraries/hlp/Makefile.am
+++ b/libraries/hlp/Makefile.am
@@ -32,7 +32,6 @@ libhlp_la_SOURCES = \
 
 C_ROUTINES = \
 	comstr.c \
-	copyn.c \
 	creh.c \
 	dec.c \
 	errmes.c \
@@ -57,6 +56,7 @@ C_ROUTINES = \
 	nametr.c \
 	outsub.c \
 	split.c \
+        strncp.c \
 	trim.c \
 	upcase.c
 
