Revert "hlp: Upgrade HLP to v20140312b"
This reverts commit c220348488bb9916a083dbe3b85f1a7a593be008.

There is a truncation bug in the new version making it unusable
despite it fixing #29.

--- a/libraries/hlp/Makefile.am
+++ b/libraries/hlp/Makefile.am
@@ -32,6 +32,7 @@ libhlp_la_SOURCES = \
 
 C_ROUTINES = \
 	comstr.c \
+	copyn.c \
 	creh.c \
 	dec.c \
 	errmes.c \
@@ -56,7 +57,6 @@ C_ROUTINES = \
 	nametr.c \
 	outsub.c \
 	split.c \
-        strncp.c \
 	trim.c \
 	upcase.c
 
