smurf: Allow masks to be created using kappa:ffclean-like algorithm
See new config params ast|com|flt.zero_snr_ffclean. This can provide a
better way (compared to basic use of xxx.zero_snr_hipass) to restrict the
size of the source areas in the mask. This is because basic use of
xxx.zero_snr_hipass produced bowling round bright sources, which cases
sources within such bowls to be excluded from the mask.

--- a/applications/smurf/libsmf/Makefile.am
+++ b/applications/smurf/libsmf/Makefile.am
@@ -151,6 +151,7 @@ smf_expmodel_init.c \
 smf_export_noi.c \
 smf_ext2km.c \
 smf_extracols.c \
+smf_ffclean.c \
 smf_fft_2dazav.c \
 smf_fft_avpspec.c \
 smf_fft_cart2pol.c \
