cupid: Add c99 CFLAG for isfinite
The hope is that this will solve build issues with CentOS 5
since commit 3e9ce4ab6de46c5fe546187c22bf4b5c65fc4541.

--- a/applications/cupid/cupidsub/Makefile.am
+++ b/applications/cupid/cupidsub/Makefile.am
@@ -36,7 +36,7 @@ noinst_LTLIBRARIES = libcupidsub.la
 
 libcupidsub_la_SOURCES = $(C_ROUTINES) $(CGENERIC_ROUTINES)
 
-AM_CFLAGS = -I..
+AM_CFLAGS = -I.. -std=c99
 
 $(C_ROUTINES:.c=.o): ../cupid.h
 
