smurf: Add a routine to expand a GRP of file system wildcards
Given a GRP that includes file system wildcards, run wordexp
and expand those wildcards, putting the result in a new GRP.

--- a/applications/smurf/libsmf/Makefile.am
+++ b/applications/smurf/libsmf/Makefile.am
@@ -144,6 +144,7 @@ smf_dtype_str.c \
 smf_dtype_string.c \
 smf_dtype_sz.c \
 smf_dump_smfData.c \
+smf_expand_filegroup.c \
 smf_expand_tilegroup.c \
 smf_expmodel_dks.c \
 smf_expmodel_two.c \
