--- a/libraries/atl/Makefile.am
+++ b/libraries/atl/Makefile.am
@@ -38,7 +38,7 @@ BASIC_C_ROUTINES = atl.c atlMapGet1C.c atlMapPut1C.c atlShow.c \
 atlMatchRegion.c atlAddWcsAxis.c atlReadFile.c atl_addwcsaxis.c \
 atlReadTable.c atlTableLutMap.c atl_chrsplitre.c atlKy2hd.c \
 atl_ky2hd.c atlHd2ky.c atl_hd2ky.c atlFindMap.c atlPairAxes.c \
-atlGetPixelParams.c atl_getpixelparams.c
+atlGetPixelParams.c atl_getpixelparams.c atlFrameSetSplit.c
 
 #  List of Fortran routines required by both ADAM and standalone
 #  libraries.
