--- a/.gitignore
+++ b/.gitignore
@@ -718,6 +718,7 @@ applications/smurf/libsmf/smf.h
 applications/smurf/libsmf/smf_average_data.c
 applications/smurf/libsmf/smf_boxcar1.c
 applications/smurf/libsmf/smf_downsamp1.c
+applications/smurf/libsmf/smf_sigmaclip.c
 applications/smurf/libsmf/smf_sort.c
 applications/smurf/libsmf/smf_stats1.c
 applications/smurf/libsmf/smf_templateFit1.c
