smurf: Add NANTEN2 SMART heterodyne instrument importer
Similar to the Supercam importer in that it uses the CLASS FITS binary
table format. The NANTEN2 exporter writes all spectra to a single
file with one row per spectrum.

Some issues remaining with data model mapping but the basic system
is functional.

--- a/applications/smurf/Makefile.am
+++ b/applications/smurf/Makefile.am
@@ -4,6 +4,7 @@
 
 SUBDIRS = defaults libsmf libsmurf libsc2sim libacsis libaztec libgsd \
           libsmfftsio \
+          libnanten \
           libsupercam \
           libsc2fts scripts docs
 
@@ -61,6 +62,7 @@ jsatilelist \
 jsadicer \
 makecube \
 makemap \
+nanten2acsis \
 rawfixmeta \
 rawpress \
 rawrecreatewcs \
@@ -178,6 +180,7 @@ smurf_mon_LDADD = libsmurf/libsmurf.la libsc2sim/libsc2sim.la \
                   libgsd/libgsd.la \
                   libsmf/libsmf.la libaztec/libaztec.la \
                   libsmfftsio/libsmfftsio.la \
+                  libnanten/libnanten.la \
                   libsupercam/libsupercam.la \
                   libacsis/libacsis.la \
                   libsc2fts/libsc2fts.la                \
