--- a/applications/smurf/libsmfftsio/Makefile.am
+++ b/applications/smurf/libsmfftsio/Makefile.am
@@ -4,6 +4,7 @@ noinst_LTLIBRARIES = libsmfftsio.la
 libsmfftsio_la_SOURCES = $(C_ROUTINES)
 
 C_ROUTINES = \
-smfftsio_read_fitshdr.c
+smfftsio_read_fitshdr.c \
+smfftsio_table_to_fitschan.c
 
 noinst_INCLUDES = smfftsio.h
