--- a/applications/smurf/libsmurf/Makefile.am
+++ b/applications/smurf/libsmurf/Makefile.am
@@ -42,6 +42,7 @@ smurf_jsatileinfo.c \
 smurf_jsatilelist.c \
 smurf_makecube.c \
 smurf_makemap.c \
+smurf_nanten2acsis.c \
 smurf_rawpress.c \
 smurf_rawrecreatewcs.c \
 smurf_rawrewrtsc2wcs.c \
