smurf: Add optional Spectral Filter Profile calibration file handling
A new 'SFP' optional calibration file parameter has been added for this purpose.
The SFP data is in a 1D array of 32 x 40 x nSfp values,
with an expected resolution of 0.025 (1/cm), normalized to 1.
For the 850 band, this ranges from wave number 11.22 to 12.395 in 1/cm units, and
for the 450 band, it ranges from wave number   21.63 to 23.105 in 1/cm units
This data is interpolated to the resolution of the spectrum before dividing it out.

Add optional RESOLUTION override
If defined as a command line parameter, an arbitrary output resolution is applied.

Add optional FNYQUIST override
Revised STEPTIME value to produce a fNyqust of 50.0 at nominal SCANVEL of 4.2 mm/sec

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -274,6 +274,14 @@
 #        Add low resolution bandpass parameter (in +/- mm from centre) to fts2split
 #     2013-11-10 (MS):
 #        Add optional rtsdelay parameter to compensate for RTS timing delay for FTS-2 mirror position
+#     2014-03-28 (MS):
+#        Add optional spectral filter profile (sfp) parameter to fts2spectrum for sub-array specific calibration files
+#     2014-04-16 (MS):
+#        Add optional Nyquist frequency (fNyquist) parameter to fts2init
+#        to override default calculated value of 50.0 when SCANVEL is at the usual rate of 4.2 mm/sec
+#     2014-04-17 (MS):
+#        Revise fts2spectrum resolution parameter to directly enter the desired spectral resolution value
+#        The default resolution is 0.005, but one could enter any sensible alternative as an override
 #     {enter_further_changes_here}
 
 #  Bugs:
@@ -2212,6 +2220,16 @@ package @PACKAGE@ {
                 prompt {ZPD calibration file}
                 helpkey *
             }
+
+            parameter fnyquist {
+                type _DOUBLE
+                access READ
+                vpath {PROMPT}
+                ppath CURRENT DEFAULT
+                prompt {Override the default Nyquist frequency}
+                default 0
+                helpkey *
+            }
         }
 
         action fts2maskmap {
@@ -2500,13 +2518,25 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter sfp {
+                position 3
+                type NDF
+                access READ
+                vpath {PROMPT}
+                ppath GLOBAL CURRENT
+                prompt {SFP calibration file}
+                default !
+                helpkey *
+            }
+
             parameter resolution {
-                type _INTEGER
+                type _DOUBLE
+
                 access READ
                 vpath {PROMPT}
                 ppath CURRENT DEFAULT
-                prompt {Spectral Resolution: 0=LowRes, 1=MediumRes, Any=HighRes}
-                default 2
+                prompt {Spectral Resolution: }
+                default 0.0
                 helpkey *
             }
 
@@ -3939,13 +3969,13 @@ package @PACKAGE@ {
                 helpkey *
             }
 
-	        parameter steptime {
+            parameter steptime {
                     type _DOUBLE
                     access WRITE
                     vpath DEFAULT
                     default 0
                     helpkey *
-	        }
+            }
 
         }
 
