cupid: Allow makeclumps to create catalogue of un-convolved clumps
Antonio C. wanted this. Setting PRECAT=TRUE causes the output catalogue
to describe the clumps as they look prior to being smoothed with the
instrumental beam.

--- a/applications/cupid/cupid.ifd.in
+++ b/applications/cupid/cupid.ifd.in
@@ -646,6 +646,16 @@ package cupid {
             helpkey *
           }
 
+         parameter precat {
+            type _LOGICAL
+            access READ
+            vpath DEFAULT
+            ppath CURRENT,DEFAULT
+            prompt {Create catalogue before instrumental smoothing is applied?}
+            default FALSE
+            helpkey *
+          }
+
          parameter rms {
             type _REAL
             access READ
