kappa: New command to shuffle data to exclude bad rows or columns
Rows are bad if they contain more than a specified fraction of bad
values. My motivation for this command is the unimap sxport script, since
Lorenzo wants entirely bad bolometers excluded from the data.

--- a/applications/kappa/kappa.news.in
+++ b/applications/kappa/kappa.news.in
@@ -4,6 +4,15 @@
    changes are listed below.  For complete details of all
    changes, see the "Release Notes" appendix in SUN/95.
 
+2 New_applications
+
+The following new applications have been added:
+
+   o  EXCLUDEBAD will copy a 2D NDF, excluding any rows or columns that
+   contain too many bad values. Good rows or columns are shuffled
+   down to lower indices to fill the gaps left by the exluded rows or
+   columns, thus causing the output NDF to be smaller than the input NDF.
+
 2 Modified_applications
 
    o  ARDPLOT
