--- a/applications/kappa/kapsub/Makefile.am
+++ b/applications/kappa/kapsub/Makefile.am
@@ -79,7 +79,7 @@ GEN_F_ROUTINES = $(KPG_N_GEN:.gen=.f) $(KPG_DR_GEN:.gdr=.f) \
 
 KPG_N_GEN = kps1_apad.gen kps1_ardm.gen kps1_lapl.gen kps1_prmx.gen \
             kps1_rs1.gen kps1_spar.gen kps1_stpa.gen kps1_thgt.gen \
-            kps1_cena.gn kps1_cpb.gen
+            kps1_cena.gn kps1_cpb.gen kps1_exb.gen
 
 KPG_DR_GEN = kps1_med.gdr kps1_mmv.gdr kps1_clps.gdr kps1_subi.gdr \
              kps1_cnse.gdr kps1_mfed.gdr kps1_mffr.gdr kps1_roli.gdr \
