--- a/applications/kappa/kappa.ifd.in
+++ b/applications/kappa/kappa.ifd.in
@@ -10551,6 +10551,54 @@ package kappa {
 
       }
 
+      action excludebad {
+         alias {exclud(ebad)}
+
+         helplib {$KAPPA_HELP}
+
+         parameter in {
+            position 1
+            type NDF
+            access READ
+            vpath PROMPT
+            ppath GLOBAL
+            association <-GLOBAL.DATA_ARRAY
+            prompt {Input NDF}
+            helpkey *
+         }
+
+         parameter rows {
+            position 3
+            type _LOGICAL
+            access READ
+            vpath DEFAULT
+            ppath CURRENT DEFAULT
+            prompt {Should bad rows be excluded?}
+            default TRUE
+            helpkey *
+         }
+
+         parameter out {
+            position 2
+            type NDF
+            access WRITE
+            vpath PROMPT
+            association ->GLOBAL.DATA_ARRAY
+            prompt {Output NDF}
+            helpkey *
+         }
+
+         parameter wlim {
+            position 4
+            type _REAL
+            vpath DEFAULT
+            ppath CURRENT DEFAULT
+            default 0.0
+            prompt {Min. fraction of good pixels in a good row}
+            helpkey *
+         }
+      }
+
       action expon {
 
          helplib {$KAPPA_HELP}
