--- a/applications/kappa/kappa.news.in
+++ b/applications/kappa/kappa.news.in
@@ -8,10 +8,11 @@
 
 The following new applications have been added:
 
-   o  EXCLUDEBAD will copy a 2D NDF, excluding any rows or columns that
-   contain too many bad values. Good rows or columns are shuffled
-   down to lower indices to fill the gaps left by the exluded rows or
-   columns, thus causing the output NDF to be smaller than the input NDF.
+   o  EXCLUDEBAD will copy a two-dimensional NDF, excluding any rows
+   or columns that contain too many bad values.  Good rows or columns
+   are shuffled down to lower indices to fill the gaps left by the
+   excluded rows or columns, thus causing the output NDF to be
+   smaller than the input NDF.
 
 2 Modified_applications
 
