KAPPA: Parameter control of bin width in HISTOGRAM.
There is a new parameter called WIDTH which can be set instead of
NUMBIN.  It's currently defaulted to null to give the previous
behaviour.

--- a/applications/kappa/kappa.ifd.in
+++ b/applications/kappa/kappa.ifd.in
@@ -11802,6 +11802,15 @@ package kappa {
             helpkey *
          }
 
+         parameter width {
+            type _DOUBLE
+            vpath DEFAULT
+            ppath CURRENT DYNAMIC
+            default !
+            prompt {Width of histogram bins}
+            helpkey *
+         }
+
          parameter xleft {
             type _DOUBLE
             prompt {Axis value at left end of horizontal axis}
