KAPPA: Do not set the BAD_PIXEL flag in COPYBAD.
The statistic returned from kps1_cpb.gen is the number of bad values
copied.  It has no knowledge of any existing bad values and these may
be different for the DATA and VARAINCE components.  As previously
written it was possible to have the BAD_PIXEL flag set to FALSE while
there were bad values present.

Also change the description of the kps1_cpb.gen arguments, and
COPYBAD's output parameters and messages to match the actual meanings.

--- a/applications/kappa/kappa.news.in
+++ b/applications/kappa/kappa.news.in
@@ -40,6 +40,8 @@ The following new applications have been added:
 
       -  Now writes the number of good and bad pixels in the output NDF
       to output parameters NGOOD and NBAD.
+      -  No longer sets the BAD_PIXEL flag for the DATA and VARIANCE
+      components.
 
    o  DISPLAY
 
