kappa: update provadd to use current API for NDG_PUTPROV.
This has involved removing parameter MORE. But it cannot have been used
by anyone since it did not work, so removing it will not cause a problem.

--- a/applications/kappa/kappa.news.in
+++ b/applications/kappa/kappa.news.in
@@ -85,6 +85,10 @@ The following new applications have been added:
       -  The USEAXIS parameter now works, needed when the supplied NDF
       has more than two axes.
 
+   o  PROVADD
+
+      -  The inoperative parameter MORE has been removed.
+
    o  SCATTER
 
       -  Now writes the number of pixels used to form the correlation
